Edited the heading

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <img class="ruby" src="img/ruby-cat.png" />
       <h1>
-        Ahmed's Pet Rescue
+        Zeko's Pet Rescue
       </h1>
       <div class="available">
         <h2>Pet Meet & Greet!</h2>
